--- a/character_mode/.vscode/settings.json
+++ b/character_mode/.vscode/settings.json
@@ -59,6 +59,7 @@
         "streambuf": "cpp",
         "thread": "cpp",
         "typeinfo": "cpp",
-        "__nullptr": "cpp"
+        "__nullptr": "cpp",
+        "cinttypes": "cpp"
     }
 }
